--- a/assets/public/css/style.css
+++ b/assets/public/css/style.css
@@ -83,6 +83,13 @@
 /*--------- Jquery ui ---------*/
 @import url('../vendor/jquery-ui/jquery-ui.min.css');
 
+/*==================== Reset Body ====================*/
+
+body, html{
+  width: 100%;
+  height: 100%;
+}
+
 /*==================== Click Top ====================*/
 .scroll-top {
   width:40px;
@@ -152,6 +159,8 @@
 .m-bottom0 {margin-bottom: 0 !important;}
 .p-bottm0 {padding-bottom: 0 !important;}
 .no-border {border: none !important;}
+
+
 /*--------------------- Transition --------------------*/
 .tran3s,header.theme-menu-wrapper #mega-menu-wrapper .nav>li>a:before,#mega-menu-wrapper .nav>li.dropdown-holder .sub-menu li a:before,
 .home-service-section .theme-title a:before,.owl-theme .owl-nav [class*=owl-],.nav-tabs > li > a,.banner-three .container a.button-two:after,
@@ -491,7 +500,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
   bottom: 0;
 }
 #theme-main-banner.banner-one .camera_overlayer {
-  background: url(../images/home/shape-1.png) no-repeat center center;
+  background: url(../img/home/shape-1.png) no-repeat center center;
 }
 #theme-main-banner.camera_wrap .camera_pag .camera_pag_ul {
   position: absolute;
@@ -787,7 +796,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
   position: absolute;
   left:0;
   top:0;
-  background: url(../images/home/10.jpg) no-repeat center;
+  background: url(../img/home/10.jpg) no-repeat center;
 }
 .more-about-us {
   padding: 0 0 30px 0;
@@ -1033,7 +1042,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
 .home-service-section ul li div i.flaticon-bar-chart {color: #2ed876;}
 .home-service-section ul li div i.flaticon-smartphone {color: #ffba34;}
 /*------------------- Two Section Wrapper -----------------*/
-.two-section-wrapper {background: url(../images/home/shape-3.png) no-repeat center;}
+.two-section-wrapper {background: url(../img/home/shape-3.png) no-repeat center;}
 /*--------------------- Testimonial ---------------------*/
 .testimonial-section {
   padding: 130px 0 150px 0;
@@ -1042,7 +1051,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
   margin-bottom: 140px;
 }
 .testimonial-section.bg-image {
-  background: url(../images/home/11.jpg) no-repeat center;
+  background: url(../img/home/11.jpg) no-repeat center;
   background-size: cover;
   padding: 130px 0 150px 0;
 }
@@ -1259,9 +1268,9 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
 }
 .home-blog-section .single-blog {margin-bottom: 85px;}
 /*----------------------- Footer ---------------------*/
-footer.bg-one {background: url(../images/home/footer.png) no-repeat center center;background-size: cover;}
+footer.bg-one {background: url(../img/home/footer.png) no-repeat center center;background-size: cover;}
 footer.bg-two {
-  background: url(../images/home/footer2.jpg) no-repeat center center;background-size: cover;
+  background: url(../img/home/footer2.jpg) no-repeat center center;background-size: cover;
   padding-top: 150px;
 }
 
@@ -1379,7 +1388,7 @@ footer .bottom-footer {padding: 25px 0 70px 0;}
 .company-seo-text img {border-radius: 50%;}
 /*----------------------------- Short Banner ----------------------*/
 .short-banner {
-  background: url(../images/home/13.jpg) no-repeat center;
+  background: url(../img/home/13.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
   margin: 150px 0 0 0;
@@ -1562,7 +1571,7 @@ footer .bottom-footer {padding: 25px 0 70px 0;}
 /*----------------------- End Hone Three Version -------------------*/
 /*------------------ Theme Inner Banner -----------------*/
 .inner-page-banner {
-  background: url(../images/inner-page/banner.jpg) no-repeat center;
+  background: url(../img/inner-page/banner.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
