--- a/assets/public/css/style.css
+++ b/assets/public/css/style.css
@@ -248,6 +248,15 @@ header.theme-menu-wrapper.menu-style-two #mega-menu-wrapper .nav .login-button a
 }
 .theme-title-two h2 strong {color: #0dda8f; }
 
+/*------------------------------ Homepage Video ----------------------*/
+
+.container-fluid#fullScreenVideo{
+  width: 100%;
+  height: 100%;
+
+  background-color: blue;
+}
+
 /*------------------------------ Theme menu ----------------------*/
 
 header .logo{
@@ -350,7 +359,9 @@ header.theme-menu-wrapper.menu-style-three.fixed {padding-top: 35px;}
 .theme-menu-wrapper.menu-style-three.fixed .top-header {display: none;}
 header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper {margin-top: 0;}
 header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {padding-top: 15px;padding-bottom: 25px;}
+
 /*-------------------------- SignUp Modla Box -----------------------*/
+
 .modal {z-index: 9999999;}
 .theme-modal-box .modal-dialog {
   width: 620px;
@@ -1045,13 +1056,25 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
 .two-section-wrapper {background: url(../img/home/shape-3.png) no-repeat center;}
 /*--------------------- Testimonial ---------------------*/
 .testimonial-section {
-  padding: 130px 0 150px 0;
+  padding: 100px 0 100px 0;
   position: relative;
   z-index: 9;
   margin-bottom: 140px;
 }
+
+.testimonial-section > .testimonial-wrapper{
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background-color: rgba(0,0,10,.55);
+}
+
 .testimonial-section.bg-image {
-  background: url(../img/home/11.jpg) no-repeat center;
+  background: url(../img/cover/testimonial.jpg) no-repeat center;
   background-size: cover;
   padding: 130px 0 150px 0;
 }
@@ -1089,7 +1112,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
 }
 .testimonial-section .main-container .item .wrapper .name h5 {
   font-size: 18px;
-  color: #00000a;
+  color: #fff;
   margin: 5px 0 3px 0;
 }
 .testimonial-section .owl-theme .owl-nav [class*=owl-] {
@@ -1097,7 +1120,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
   background: transparent;
   border-radius: 0;
   margin: 0 5px;
-  color: #d2d5d8;
+  color: #fff;
   font-size: 28px;
 }
 .testimonial-section .owl-theme .owl-nav [class*=owl-]:hover {color: #393a3b;}
@@ -1570,13 +1593,13 @@ footer .bottom-footer {padding: 25px 0 70px 0;}
 .partent-logo-section img {margin: 0 auto;}
 /*----------------------- End Hone Three Version -------------------*/
 /*------------------ Theme Inner Banner -----------------*/
-.inner-page-banner {
-  background: url(../img/inner-page/banner.jpg) no-repeat center;
+/*.inner-page-banner {
+  background: url(../img/cover/cover_about.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
   margin-bottom: 190px;
-}
+}*/
 .inner-page-banner .opacity {
   text-align: center;
   background: rgba(0,0,10,0.55);
