--- a/assets/public/css/works.css
+++ b/assets/public/css/works.css
@@ -24,12 +24,25 @@
     margin-top: 30px !important;
 }
 
+#mixitUp-item .mix{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+#mixitUp-item .mix .single-item{
+    margin-bottom: 0;
+}
+
 .modal-header {
     background-color: #e67e22;
 }
 
 .modal-header h4{
     color: #fff;
+}
+
+.modal-body{
+    padding: 0;
 }
 
 .work_cover{
@@ -44,6 +57,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.work_content{
+    padding: 15px;
 }
 
 .work_content .row > .left{
